force-app/main/default/objects/AH_PLCM_TargetOrg_User__c/AH_PLCM_TargetOrg_User__c.object-meta.xml
<CustomObject>
    <description>Object will be populated by retrieving Active users from Salesforce.</description>
    <label>PLCM TargetOrg User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PLCM TargetOrg User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLCM TargetOrg Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>