force-app/main/default/objects/AH_PLCM_TargetOrg_User__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Legacy data - External Id. Field will be used during UPSERT operation</inlineHelpText>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>