force-app/main/default/objects/AH_PLCM_TargetOrg_User__c/fields/PLCM_Migration_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>PLCM_Migration_Project_Name__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036103</description>
    <inlineHelpText>Migration Project to which this TargetOrg user is associated.</inlineHelpText>
    <label>PLCM Migration Project Name</label>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipLabel>PLCM TargetOrg Users</relationshipLabel>
    <relationshipName>PLCM_TargetOrg_Users</relationshipName>
    <type>Lookup</type>
</CustomField>