force-app/main/default/objects/AH_PLCM_TargetOrg_User__c/fields/User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Address__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Email Address in Salesforce.</inlineHelpText>
    <label>User Email Address</label>
    <type>Email</type>
</CustomField>