force-app/main/default/objects/AH_PLCM_TargetOrg_User__c/fields/User_Login_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Login_Name__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Salesforce Login Name of TargetOrg user.</inlineHelpText>
    <label>User Login Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>